--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aniso8601==7.0.0
 asgiref==3.2.3
 Django==3.0.3
 django-cors-headers==3.2.1
+django-filter==2.2.0
 django-graphql-jwt==0.3.0
 graphene==2.1.8
 graphene-django==2.8.2
